Add activity for selecting bus stop from list (activated from menu).

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,5 +22,12 @@
 				<data android:mimeType="vnd.android.cursor.item/vnd.busdepature" />
 			</intent-filter>
 		</activity>
+			<activity android:name=".FindBusStopByNameActivity" android:label="Find bus stop by name">
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:mimeType="vnd.android.cursor.item/vnd.busdepature" />
+			</intent-filter>
+		</activity>
     </application>
 </manifest>
