--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.kristian.TrondheimBussesLive"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-sdk android:minSdkVersion="8" />
+	package="net.kristian.TrondheimBussesLive" android:versionCode="1"
+	android:versionName="1.0">
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-sdk android:minSdkVersion="8" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".FrontpageActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".FrontpageActivity" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 		<activity android:name=".RealTimeActivity" android:label="Bus depature info">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
@@ -22,12 +21,21 @@
 				<data android:mimeType="vnd.android.cursor.item/vnd.busdepature" />
 			</intent-filter>
 		</activity>
-			<activity android:name=".FindBusStopByNameActivity" android:label="Find bus stop by name">
+		<activity android:name=".FindBusStopByNameActivity"
+			android:label="Find bus stop by name">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<data android:mimeType="vnd.android.cursor.item/vnd.busdepature" />
 			</intent-filter>
 		</activity>
-    </application>
+		<activity android:name=".FindBusStopByDistanceActivity"
+			android:label="Find bus stop by distance">
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:mimeType="vnd.android.cursor.item/vnd.busdepature" />
+			</intent-filter>
+		</activity>
+	</application>
 </manifest>
