--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,13 +8,15 @@
 	<uses-sdk android:minSdkVersion="8" />
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name" android:name="SainntidApplication">
-		<activity android:name=".FrontpageActivity" android:label="@string/app_name">
+		<activity android:name=".FrontpageActivity" android:label="@string/app_name" 
+		          android:theme="@android:style/Theme.Black.NoTitleBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".RealTimeActivity" android:label="Bussan: Bus stop">
+		<activity android:name=".RealTimeActivity" android:label="Bussan: Bus stop"
+		          android:theme="@android:style/Theme.Black.NoTitleBar">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -22,7 +24,8 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".FindBusStopByNameActivity"
-			android:label="Bussan: All bus stops">
+			android:label="Bussan: All bus stops"
+			android:theme="@android:style/Theme.Black.NoTitleBar">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -30,7 +33,8 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".FindBusStopByDistanceActivity"
-			android:label="Bussan: Closest bus stops">
+			android:label="Bussan: Closest bus stops"
+			android:theme="@android:style/Theme.Black.NoTitleBar">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
