--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>Bussan</name>
 	<comment></comment>
 	<projects>
+		<project>ActionBarSherlock-4.1.0</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
