--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,18 +5,16 @@
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-        <uses-sdk android:minSdkVersion="8" />
+        <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15"/>
 
-        <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="BussanApplication">
-                <activity android:name=".FrontpageActivity" android:label="@string/app_name" 
-                          android:theme="@android:style/Theme.Black.NoTitleBar">
+        <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="BussanApplication" android:theme="@style/Theme.Sherlock">
+                <activity android:name=".FrontpageActivity" android:label="@string/app_name">
                         <intent-filter>
                                 <action android:name="android.intent.action.MAIN" />
                                 <category android:name="android.intent.category.LAUNCHER" />
                         </intent-filter>
                 </activity>
-                <activity android:name=".RealTimeActivity" android:label="Bussan: Bus stop"
-                          android:theme="@android:style/Theme.Black.NoTitleBar">
+                <activity android:name=".RealTimeActivity" android:label="Bussan: Bus stop">
                         <intent-filter>
                                 <action android:name="android.intent.action.VIEW" />
                                 <category android:name="android.intent.category.DEFAULT" />
@@ -24,8 +22,7 @@
                         </intent-filter>
                 </activity>
                 <activity android:name=".FindBusStopByNameActivity"
-                        android:label="Bussan: All bus stops"
-                        android:theme="@android:style/Theme.Black.NoTitleBar">
+                        android:label="Bussan: All bus stops">
                         <intent-filter>
                                 <action android:name="android.intent.action.VIEW" />
                                 <category android:name="android.intent.category.DEFAULT" />
@@ -33,8 +30,7 @@
                         </intent-filter>
                 </activity>
                 <activity android:name=".FindBusStopByDistanceActivity"
-                        android:label="Bussan: Closest bus stops"
-                        android:theme="@android:style/Theme.Black.NoTitleBar">
+                        android:label="Bussan: Closest bus stops">
                         <intent-filter>
                                 <action android:name="android.intent.action.VIEW" />
                                 <category android:name="android.intent.category.DEFAULT" />
@@ -42,8 +38,7 @@
                         </intent-filter>
                 </activity>
                 <activity android:name=".BusDepartureDetailActivity"
-                          android:label="Bussan: Bus Departure"
-                          android:theme="@android:style/Theme.Black.NoTitleBar">
+                          android:label="Bussan: Bus Departure">
                   <intent-filter>
                     <action android:name="android.intent.action.VIEW" />
                     <category android:name="android.intent.category.DEFAULT" />
