--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 15
+    compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "no.kriben.bussan"
         minSdkVersion 8
-        targetSdkVersion 15
+        targetSdkVersion 21
     }
 
     buildTypes {
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
     compile files('libs/busstopstrondheim.jar')
     compile files('libs/ksoap2-android-assembly-2.5.7-jar-with-dependencies.jar')
 }
