--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-        <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15"/>
+        <uses-sdk android:minSdkVersion="8"/>
 
-        <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="BussanApplication" android:theme="@style/Theme.Sherlock">
+        <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="BussanApplication" android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
                 <activity android:name=".FrontpageActivity" android:label="@string/app_name">
                         <intent-filter>
                                 <action android:name="android.intent.action.MAIN" />
