--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
         <uses-sdk android:minSdkVersion="8"/>
 
-        <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="BussanApplication" android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="BussanApplication" android:theme="@style/Theme.AppCompat.Light.DarkActionBar" android:allowBackup="true">
                 <activity android:name=".FrontpageActivity" android:label="@string/app_name">
                         <intent-filter>
                                 <action android:name="android.intent.action.MAIN" />
